# FabricBatchjobFramework

./: .gitignore  pyproject.toml  start.py
data/: test.csv
src/: start.py
src/batchjobs/spark/: SparkExtensions.py  StringEnum.py  sparkmotor.py
src/batchjobs/testbatchjob/: test_batchjob.py
src/entities/: Account.py  Police.py
src/fabric_framework/batchjobs/: __init__.py
src/fabric_framework/batchjobs/runner/: runner.py
src/fabric_framework/batchjobs/testbatchjob/: test_batchjob.py  testbatchjob.py  testbatchjob_map.py
src/fabric_framework/dataverse_entities/: Account.py  Police.py
src/fabric_framework/utils/: dataframe_extensions.py  enums.py  lookup_builder.py  spark_extensions.py
src/spark/: DataFrameExtensions.py  LookupBuilder.py  SparkExtensions.py
tests/: Harness.py  NotebookMock.py
